FR-651: fix cart product list bottom overlap (#121)
* style(Cart): add bottom-padding to product list

* style(Cart): make product list padding-bottom less

--- a/src/components/OverlayManager/Cart/scss/index.scss
+++ b/src/components/OverlayManager/Cart/scss/index.scss
@@ -34,7 +34,7 @@
   }
 
   &__list {
-    padding: 0 $spacer;
+    padding: 0 $spacer 2.5rem $spacer;
     height: calc(100vh - 17.5rem);
     overflow: auto;
 
